--- a/cadence/index.html
+++ b/cadence/index.html
@@ -1038,6 +1038,11 @@
           <span>Require sets to be published before visible to members</span>
         </label>
         <p class="muted small-text" style="margin-top: -0.5rem; margin-bottom: 1rem;">When enabled, sets must be published by owners/managers before they're visible to other team members.</p>
+        <label class="custom-checkbox-label">
+          <input type="checkbox" id="team-itunes-indexing-enabled" class="custom-checkbox" />
+          <span>Enable iTunes indexing for song metadata</span>
+        </label>
+        <p class="muted small-text" style="margin-top: -0.5rem; margin-bottom: 1rem;">When disabled, background iTunes metadata indexing will not run for this team.</p>
         <div class="modal-actions">
           <button type="button" class="btn ghost" id="cancel-team-settings">Cancel</button>
           <button type="submit" class="btn primary">Save</button>
