suggested metadata improvements

--- a/cadence/index.html
+++ b/cadence/index.html
@@ -990,7 +990,8 @@
             <button type="submit" class="btn primary">Save</button>
           </div>
         </div>
-        <p class="muted small-text" style="text-align: right; margin-top: 0.5rem; font-size: 0.7rem;">
+        <p id="getsongbpm-attribution" class="muted small-text"
+          style="text-align: right; margin-top: 0.5rem; font-size: 0.7rem; display: none;">
           Some data provided by <a href="https://getsongbpm.com" target="_blank" rel="noopener noreferrer"
             style="color: inherit;">GetSongBPM</a>
         </p>
