--- a/cadence/index.html
+++ b/cadence/index.html
@@ -1171,11 +1171,11 @@
         <div class="checkbox-setting-group" style="margin-top: 1rem;">
           <label class="custom-checkbox-label">
             <input type="checkbox" id="team-ai-enabled" class="custom-checkbox" />
-            <span>Enable AI Features <span class="badge"
+            <span>Enable Trill <span class="badge"
                 style="background: var(--accent-color); color: var(--bg-primary); border: none; font-size: 0.7rem; padding: 2px 6px; margin-left: 0.5rem;">BETA</span></span>
           </label>
           <p class="muted small-text" style="margin-top: 0.25rem; margin-left: 1.75rem;">
-            Allow AI to suggest keys, reorder songs, and assist with set management.
+            Allow Cadence Trill AI to suggest keys, reorder songs, and assist with set management, as well as create chord charts and other resources.
           </p>
         </div>
         <div style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid var(--border-color);">
