--- a/cadence/index.html
+++ b/cadence/index.html
@@ -1216,6 +1216,15 @@
           <p class="muted small-text" style="margin-top: 0.25rem; margin-left: 1.75rem;">
             Allow Cadence Trill AI to suggest keys, reorder songs, and assist with set management, as well as create chord charts and other resources.
           </p>
+          <div class="checkbox-setting-group" style="margin-top: 0.75rem; margin-left: 1.75rem;">
+            <label class="custom-checkbox-label">
+              <input type="checkbox" id="team-ai-chat-managers-only" class="custom-checkbox" />
+              <span>Only managers can chat with Trill</span>
+            </label>
+            <p class="muted small-text" style="margin-top: 0.25rem; margin-left: 1.75rem;">
+              Restrict Trill chat access to owners and managers.
+            </p>
+          </div>
         </div>
         <div style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid var(--border-color);">
           <button type="button" class="btn ghost" id="btn-delete-team-settings"
