--- a/cadence/index.html
+++ b/cadence/index.html
@@ -1129,6 +1129,19 @@
           </div>
           <p class="muted small-text invite-link-section__value" id="invite-link-value"></p>
         </div>
+
+        <div class="invite-links-manager">
+          <div class="invite-links-manager__header">
+            <h4>Invite Links</h4>
+            <p class="muted small-text">
+              View and manage existing invite links for this team.
+              You can revoke links, adjust limits, or change when they expire.
+            </p>
+          </div>
+          <div id="invite-links-list" class="invite-links-list muted small-text">
+            <!-- Populated dynamically -->
+          </div>
+        </div>
       </form>
     </div>
   </div>
