--- a/cadence/index.html
+++ b/cadence/index.html
@@ -305,7 +305,7 @@
           <div class="section-header">
             <div>
               <h2><i class="fa-solid fa-user-clock"></i> Your Sets</h2>
-              <p class="muted">Sets where you're assigned to a song</p>
+              <p class="muted">Sets you're assigned to or have pinned</p>
             </div>
           </div>
           <div id="your-sets-list" class="sets-grid"></div>
