fixes and enhancements

--- a/cadence/index.html
+++ b/cadence/index.html
@@ -377,7 +377,11 @@
       <div id="people-tab" class="tab-content hidden">
         <div class="dashboard-header">
           <div>
-            <h2><i class="fa-solid fa-address-book"></i> Team Members</h2>
+            <h2>
+              <i class="fa-solid fa-address-book"></i>
+              Team Members
+              <span id="team-member-count" class="muted small-text"></span>
+            </h2>
           </div>
           <div class="header-actions">
             <button id="btn-leave-team" class="btn ghost hidden" style="color: var(--error-color);"><i
