--- a/cadence/index.html
+++ b/cadence/index.html
@@ -328,7 +328,11 @@
       <div id="songs-tab" class="tab-content hidden">
         <div class="dashboard-header">
           <div>
-            <h2><i class="fa-solid fa-music"></i> Song Catalog</h2>
+            <h2>
+              <i class="fa-solid fa-music"></i>
+              Song Catalog
+              <span id="songs-count" class="muted small-text"></span>
+            </h2>
             <div id="itunes-indexing-indicator" class="indexing-indicator hidden">
               <span class="indexing-status">Some song metadata is still indexing</span>
             </div>
