--- a/cadence/index.html
+++ b/cadence/index.html
@@ -459,9 +459,7 @@
               <button id="btn-view-as-member-detail" class="btn secondary hidden ripple-btn" type="button"><i
                   class="fa-solid fa-user"></i>
                 Preview</button>
-              <button id="btn-edit-set-detail" class="btn secondary hidden ripple-btn" type="button"><i
-                  class="fa-solid fa-pencil"></i> Edit
-                Set</button>
+              <button id="btn-edit-set-detail" class="btn secondary hidden ripple-btn" type="button"><i class="fa-solid fa-pencil"></i> Edit Details</button>
               <button id="btn-delete-set-detail" class="btn ghost hidden ripple-btn" type="button">Delete</button>
               <div class="header-dropdown-container hidden desktop-only ripple-btn" id="header-add-dropdown-container">
                 <button id="btn-header-add-toggle" class="btn primary" type="button">
